altera método de relatorioDiario para listarVendasPorData e remove lógica de consumo diário